2008-07-25  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c (plot_ticlabel_using): If tic labels will be generated
	from an expression then force evaluation of all column contents.
	Otherwise references to column() return uninitialized garbage. Bugfix.

2008-07-24  Jozef Vesely  <vesely@gjh.sk>

	* src/datafile.c src/datafile.h:  Binary data types for 64-bit ints
	(long long).

2008-07-23  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc: Fix various typos and cross-reference formats.

2008-07-23  Ethan Merritt  <merritt@u.washington.edu>

	* src/mouse.c src/command.c (pause_command) src/command.h:
	New variant 'pause mouse close' will pause until the plot window is
	closed. Unlike existing variants, this does not disable mouse-clicks,
	hotkeys, or zooming.  Add wxt to the list of terminals that need a
	work-around to avoid losing an input character when the plot window
	is closed.

2008-07-22  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (boundary3d): Add missing initialization of the clipping
	boundaries. Clip 3D plots to the canvas unless the terminal flags that
	it will do its own clipping.

	* docs/plotstyles.gnu docs/gnuplot.doc demo/hidden2.dem:
	Add an example image plot to the pdf docs, modify the interlocking tori
	idemo in hidden2d to show with/without depth sorting side-by-side.

	* src/mouse.c (event_buttonpress): Zooming uses mouse button 3.
	Do not disable it just because we are using buttons 1 or 2 for something
	else.

2008-07-21  Ethan Merritt  <merritt@u.washington.edu>

	* src/eval.c src/eval.h (gp_word gp_words) C-callable versions of the
	built-in functions word() and words().

	* src/parse.c (check_for_iteration next_iteration) docs/gnuplot.doc:
	Sanity check the name of the variable used for iteration.  New syntax 
	allows iteration over the entries in a string:
	    plot for [foo in "a b c d"] ...

	* src/util.c (int_error): Allow somewhat longer error messages.
